<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sparkbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:soundEffectsEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/star_layout_text"
                    android:textSize="20sp" />

                <at.connyduck.sparkbutton.SparkButton
                    android:id="@+id/star_button1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    sparkbutton:activeImage="@drawable/ic_star_on"
                    sparkbutton:animationSpeed=".85"
                    sparkbutton:iconSize="30dp"
                    sparkbutton:inactiveImage="@drawable/ic_star_off" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:soundEffectsEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/star_layout_text2"
                    android:textSize="20sp" />

                <at.connyduck.sparkbutton.SparkButton
                    android:id="@+id/star_button2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    sparkbutton:activeImage="@drawable/ic_star_on"
                    sparkbutton:animationSpeed=".85"
                    sparkbutton:iconSize="30dp"
                    sparkbutton:inactiveImage="@drawable/ic_star_off" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <include layout="@layout/github_button" />

    </LinearLayout>
</ScrollView>