...
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <at.connyduck.sparkbutton.SparkButton
            android:id="@+id/facebook_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            sparkbutton:activeImage="@drawable/ic_thumb"
            sparkbutton:iconSize="80dp"
...
