...
                android:layout_gravity="center_horizontal"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <at.connyduck.sparkbutton.SparkButton
                    android:id="@+id/twitter_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:clickable="false"
                    sparkbutton:activeImage="@drawable/ic_twitter"
...
